--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
       url: "https://github.com/CochinoChingon"
     - label: "Contact"
       icon: "fas fa-fw fa-envelope-square"
-      url: "https://sucias.xyz/toca"
+      url: "https://sucias.xyz/contact"
 
 footer:
   links:
