update config for footer and author profile

--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,9 @@ author:
     - label: "YouTube"
       icon: "fab fa-youtube"
       url: "https://youtube.com/channel/UCgYSjBmIL3nkxBon4f0Gl_Q"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/CochinoChingon"
+    - label: "Reddit"
+      icon: "fab fa-reddit"
+      url: "https://reddit.com/u/suciasaremyfavorite"
     - label: "Contact"
       icon: "fas fa-fw fa-envelope-square"
       url: "https://sucias.xyz/contact"
@@ -79,9 +79,9 @@ footer:
     - label: "YouTube"
       icon: "fab fa-youtube"
       url: "https://youtube.com/channel/UCgYSjBmIL3nkxBon4f0Gl_Q"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/CochinoChingon"
+    - label: "TikTok"
+      icon: "fab fa-tiktok"
+      url: "https://tiktok.com/@sucias.are.my.favorite"
     - label: "Reddit"
       icon: "fab fa-square-reddit"
       url: "https://reddit.com/u/suciasaremyfavorite"
