--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Sucias are My Favorite
+# title: Sucias are My Favorite
 logo: /images/masthead.png
 masthead_title: are my Favorite
 email: el.gallo.cochino@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   'Life dating and relationship advice with a kink twist, life experiences, and personal stories'
-twitter_username: sucias_r_my_fav
-github_username: cochinochingon
+github_username: gChingon
 minimal_mistakes_skin: neon
 search: true
 
