--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: CHEAT CODES
 logo: /images/masthead.png
-masthead_title: are my Favorite
+masthead_title: home
 email: el.gallo.cochino@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   'Life dating and relationship advice with a kink twist, life experiences, and personal stories'
@@ -65,10 +65,10 @@ author:
   links:
     - label: "YouTube"
       icon: "fab fa-youtube"
-      url: "https://youtube.com/channel/UCgYSjBmIL3nkxBon4f0Gl_Q"
+      url: "https://youtube.com/@gallo.s.chingon"
     - label: "Reddit"
       icon: "fab fa-reddit"
-      url: "https://reddit.com/u/suciasaremyfavorite"
+      url: "https://reddit.com/u/gallo-s-chingon/?sort=top"
     - label: "Contact"
       icon: "fas fa-fw fa-envelope-square"
       url: "https://sucias.xyz/contact"
@@ -77,13 +77,13 @@ footer:
   links:
     - label: "YouTube"
       icon: "fab fa-youtube"
-      url: "https://youtube.com/channel/UCgYSjBmIL3nkxBon4f0Gl_Q"
+      url: "https://youtube.com/@gallo.s.chingon"
     - label: "TikTok"
       icon: "fab fa-tiktok"
-      url: "https://tiktok.com/@sucias.are.my.favorite"
+      url: "https://tiktok.com/@gallo.s.chingon"
     - label: "Reddit"
       icon: "fab fa-square-reddit"
-      url: "https://reddit.com/u/suciasaremyfavorite"
+      url: "https://reddit.com/u/gallo-s-chingon/?sort=top"
 
 collections:
   feat:
@@ -131,8 +131,8 @@ category_archive:
   type: liquid
   path: /categories/
 
-analytics:
-  provider: "google-gtag"
-  google:
-    tracking_id: "UA-108314831-1"
-    anonymize_ip: false
+# analytics:
+#   provider: "google-gtag"
+#   google:
+#     tracking_id: "UA-108314831-1"
+#     anonymize_ip: false
