deleted some images and resized most

--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ defaults:
       type: posts
     values:
       layout: single
-      share: false
+      share: true
       related: true
       show_date: true
   # _pages
