--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,3 @@
 main:
-  - title: "FAQ"
-    url: /faq/
-  - title: "connect"
-    url: /connect/
-  - title: "events"
-    url: https://www.eventbrite.com/o/sucias-18359880785
-    target: _blank
+  - title: "About"
+    url: /about/
